# mountbridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
data/: mountbridge.desktop  mountbridge.sudoers
mountbridge/: __init__.py  __main__.py  constants.py  discovery.py  models.py  ops.py  store.py  widgets.py  window.py
