[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mountbridge"
version = "1.1.0"
description = "Network mount manager for XFCE / Debian — NFS, SMB and SSHFS with system keyring credential storage"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ben", email = "ben@mutefx.net" }]
keywords = ["nfs", "smb", "sshfs", "gtk", "xfce", "mount", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.10"
dependencies = [
    "keyring>=24.0",
    "SecretStorage>=3.3",
]

[project.scripts]
mountbridge = "mountbridge.window:main"

[project.urls]
Homepage   = "https://github.com/mpx14/mountbridge"
Repository = "https://github.com/mpx14/mountbridge"
Issues     = "https://github.com/mpx14/mountbridge/issues"
Changelog  = "https://github.com/mpx14/mountbridge/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mountbridge*"]

[tool.setuptools.package-data]
mountbridge = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
